fluxcd/infrastructure/configs/overlays/production/cilium-policies/mr-resetti/cnp-kyverno-admission-webhook.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-kyverno-admission-webhook
spec:
  description: >-
    Allow kube-apiserver to reach kyverno admission controller on 9443/TCP.
  enableDefaultDeny:
    ingress: false
    egress: false
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: admission-controller
  ingress:
    - fromEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "9443"
              protocol: TCP
